Refactor `criarAudiencias` in `AudienciaService` to use `getFirst()` for clearer and more concise access to the first element in collections.